[package]
name = "ark-invest-api-rust-data"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clokwerk = "0.4"
futures = "0.3"
glob = { version = "0.3" }
lazy_static = "1.5"
openssl = { version = "0.10", features = ["vendored"] }
polars = { version = "0.32", features = [
  "dtype-struct",
  "json",
  "lazy",
  "lazy_regex",
  "object",
  "parquet",
  "round_series",
  "strings",
] }
rand = "0.9"
reqwest = { version = "0.12", features = ["blocking", "gzip"] }
serde_json = "1.0"
strum = "0.27"
strum_macros = "0.27"
tokio = { version = "1.43", features = ["full"] }

[dev-dependencies]
pretty_assertions = "1.4"
rstest = "0.24"
